# xml-prettify

./: .gitignore  LICENSE  README.md  stack.yaml  xml-prettify.cabal
app/: Main.hs
examples/: ugly.xml
src/: Main.hs
src/Text/XML/: Prettify.hi  Prettify.hs
