name:                  xml-prettify
version:               0.1.0
synopsis:              Pretty print XML.
description:           A simple command-line XML pretty-printer which automatically handles
license:               BSD3
license-file:          LICENSE
author:                David M. Rosenberg
maintainer:            dmr@davidrosenberg.me
category:              Text
build-type:            Simple
extra-source-files:    README.md
                     , LICENSE
                     , examples/ugly.xml
cabal-version:         >=1.8

library
  exposed-modules:     Text.XML.Prettify
  hs-source-dirs:      src
  build-depends:       base >=4 && <= 5

executable xml-prettify
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >= 4 && <= 5
                     , cmdargs -any
                     , text
                     , unix >= 2.4
                     , xml-prettify
